top banner too wide slimmer view try to fix

--- a/vufind/web/interface/themes/responsive/css/main.css
+++ b/vufind/web/interface/themes/responsive/css/main.css
@@ -6079,7 +6079,7 @@ a.badge:focus {
   .dl-horizontal dd {
     margin-left: 0;
   }
-  .container {
+   .navbar-fixed-bottom .container {
     width: auto;
   }
   .row-fluid {
